hphp/test/zend/bad/ext/standard/tests/file/bug52624.php
<?php

echo tempnam("directory_that_not_exists", "prefix_");

?>
